--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
-os:
-    - linux
-    - osx
 sudo: required
-dist: trusty
-language: generic
-osx_image: xcode10.2
+language: minimal
 env:
-    - SWIFT_VERSION=swift-5.0
+    - SWIFT_VERSION=swift-5.1.1
 install:
     - eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
+
+jobs:
+  include:
+    - os: osx
+      osx_image: xcode11.1
+    - os: osx
+      osx_image: xcode11.2
+    - os: linux
+      dist: bionic
+    - os: linux
+      dist: xenial
+
 script:
     - swift build
     - swift build -c release
